--- a/tea-house project/single-html-css-tailwind-recap/index.html
+++ b/tea-house project/single-html-css-tailwind-recap/index.html
@@ -5,15 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tea-house</title>
 
-    //tailwindcss
+    <!-- //tailwindcss -->
      <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
-    // forntawesome cdn
+    <!-- // forntawesome cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
 </head>
 <body>
     <!-- banner section starts here -->
-     
+     <div class="parent_div flex flex-col md:flex-row justify-between  min-h-[20px] max-w-[1250px] mx-auto">
+        <div class="left_div ">
+            <h1 class = "text-[80px] font-bold">
+                It's good <br/>
+                tea time at The <br/> Tea House
+            </h1>
+            <p class="text-[18px] my-10">Tea and Botanical Solutions Supplier Give Optimum <br/> Satisfaction To Your Taste Buds.</p>
+            <button class="w-[200px] text-xl rounded-lg bg-gradient-to-r from-[#ff8938] to-[#ff0000] text-white h-[64px] ">
+                <span>Explore More</span>
+                <span><i class="fa-solid fa-arrow-down -rotate-135"></i></span>
+            </button>
+        </div>
+        <div class="right_div relative">
+            <img src="./images/banner.png" class="relative top-[100px]" alt="">
+            <div class="flex items-center bg-white w-[255px] h-[100px] rounded-lg shadow-md absolute left-[100px]">
+              <div><i class="fa-solid fa-star text-2xl text-amber-500"></i></div>
+                <div class="ml-2">
+                  <h2 class="lg:text-2xl font-bold">5.00</h2>
+                  <p class="text-gray-500">Trust Pilot Ratings</p>
+                </div> 
+            </div>
+
+        </div>
+     </div>
 </body>
 </html>
